--- a/index.html
+++ b/index.html
@@ -3,11 +3,125 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
+    <title>Miami Condo Kings</title>
+    <link rel="icon" href="images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <h1>Miami</h1>
+    <header class="header">
+      <div class="header__top">
+        <div class="header__phone">+1 234 555-55-55</div>
+        <div class="logo header__logo"></div>
+        <div class="header__action"><a href="#" class="header__link">Call to order</a></div>
+      </div>
+      <p class="header__name">Miami<br>Condo Kings</p>
+      <nav class="nav header__nav">
+        <ul class="nav__list">
+          <li class="nav__item nav__item_active">Home</li>
+          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Consultation</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Testimonials</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section">
+        <div class="info">
+          <h1 class="info__heading">Miami best<br>Real estate <a href="#">here</a> </h1>
+          <div class="info__text">
+          <h3 class="info__small_heding">Over 50 years experience in love.</h3>
+          <p>Mazel and VA Tsukkerman in his "Analysis of musical works."<br>Pointillism, which originated in the music of the early twentieth<br> century, microforms, found a distant historical.</p>
+          <p>The market leader in real estate since 2003. Awards Real Estate<br> Company, 2010, 2011, 2013. More than 200 satisfied customers<br> premium segment. We focus only on new buildings and high-level<br> doskanalno know this area better than other specialists.<br>Working directly with developers - so have more useful information<br> about the profitable deals.</p>
+          <p><strong>We will never be late!<br>Guaranteed secure transaction - 100%</strong></p>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="heading section__heading">Gallery<span class="heading__crown"></span></h2>
+        <div class="gallery">
+          <div class="photos photos_wide_left">
+            <img src="images/photos/1.jpg" alt="" class="photos__img">
+            <img src="images/photos/2.jpg" alt="" class="photos__img">
+          </div>
+          <p class="gallery__caption"><a href="#" class="link">Marina Palms</a> / North Miami Beach, FL 33162</p>
+          <div class="photos">
+            <img src="images/photos/3.jpg" alt="" class="photos__img">
+            <img src="images/photos/4.jpg" alt="" class="photos__img">
+          </div>
+          <p class="gallery__caption"><a href="#" class="link">Edition Residence</a> / Miami Beach, FL 33139</p>
+          <div class="photos photos_wide_right">
+            <img src="images/photos/5.jpg" alt="" class="photos__img">
+            <img src="images/photos/6.jpg" alt="" class="photos__img">
+          </div>
+          <p class="gallery__caption"><a href="#" class="link">Faena House</a> / Miami Beach, FL 33140</p>
+          <button class="button gallery__button">Viev all</button>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="heading section__heading">Consultation<span class="heading__crown"></span></h2>
+        <div class="consultation">
+          <div class="consultation__text">
+            <h3 class="consultation__heading">How long have you do<br> yourself a gift?</h3>
+            <p>The procedural change mezzo forte starts izoritmichesky<br> pickup at these moments stop LA Mazel and VA<br> Tsukkerman in his "Analysis of musical works."<br> Pointillism, which originated in the music of the early<br> twentieth century, microforms, found a distant historical.</p>
+          </div>
+          <form class="form consultation__form">
+            <label class="form__item"><input type="text" name="name" placeholder="Name" class="input form__input"></label>
+            <label class="form__item"><input type="text" name="phone" placeholder="Phone" class="input form__input"></label>
+            <label class="form__item"><input type="text" name="email" placeholder="Email" class="input form__input"></label>
+            <button class="button form__button">Consultation</button>
+          </form>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="heading section__heading">Testimonials<span class="heading__crown"></span></h2>
+        <div class="testimonials">
+          <div class="person">
+            <img class="person__photo" src="images/people/1.png" alt="Leslie Mckinney">
+            <h3 class="person__name">Leslie Mckinney</h3>
+            <p class="person__position">CEO</p>
+            <p class="person__text">Nice work, Certificates National<br> Association of Realtors (USA)</p>
+          </div>
+          <div class="person">
+            <img class="person__photo" src="images/people/2.png" alt="Scarlett Hawkins">
+            <h3 class="person__name">Scarlett Hawkins</h3>
+            <p class="person__position">Senior Vice President</p>
+            <p class="person__text">My soul is illuminated by an<br> unearthly joy, as these beautiful<br> spring morning, which I enjoy<br> with all my heart</p>
+          </div>
+          <div class="person">
+            <img class="person__photo" src="images/people/3.png" alt="Max Henry">
+            <h3 class="person__name">Max Henry</h3>
+            <p class="person__position">Chief Design Officer</p>
+            <p class="person__text">When my lovely valley of steam<br> rises and half-day sun is above an<br> impermeable</p>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="heading section__heading">Contact us<span class="heading__crown"></span></h2>
+        <div class="contact">
+          <div class="contact__text">
+            <p class="contact__phone contact__names">Phone</p>
+            <p>+1 234 555-55-55</p>
+            <p class="contact__email contact__names">Email</p>
+            <p><a href="hello@miami.com" class="link">hello@miami.com</a></p>
+            <p class="contact__address contact__names">Address</p>
+            <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
+          </div>
+          <form class="form contact__form">
+            <label class="form__item"><input type="text" name="name" placeholder="Name" class="input form__input"></label>
+            <label class="form__item"><input type="text" name="phone" placeholder="Phone" class="input form__input"></label>
+            <label class="form__item"><textarea name="message" placeholder="Message" class="input input__textarea form__input"></textarea></label>
+            <button class="button form__button">Consultation</button>
+          </form>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="logo footer__logo"></div>
+      </footer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
