--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="info">
           <h1 class="info__heading">Miami best<br>Real estate <a href="#">here</a> </h1>
           <div class="info__text">
-          <h3 class="info__small_heding">Over 50 years experience in love.</h3>
+          <h3 class="info__small_heading">Over 50 years experience in love.</h3>
           <p>Mazel and VA Tsukkerman in his "Analysis of musical works."<br>Pointillism, which originated in the music of the early twentieth<br> century, microforms, found a distant historical.</p>
           <p>The market leader in real estate since 2003. Awards Real Estate<br> Company, 2010, 2011, 2013. More than 200 satisfied customers<br> premium segment. We focus only on new buildings and high-level<br> doskanalno know this area better than other specialists.<br>Working directly with developers - so have more useful information<br> about the profitable deals.</p>
           <p><strong>We will never be late!<br>Guaranteed secure transaction - 100%</strong></p>
@@ -103,9 +103,9 @@
         <div class="contact">
           <div class="contact__text">
             <p class="contact__phone contact__names">Phone</p>
-            <p>+1 234 555-55-55</p>
+            <p><a href="+1 234 555-55-55" class="contact__link">+1 234 555-55-55</a></p>
             <p class="contact__email contact__names">Email</p>
-            <p><a href="hello@miami.com" class="link">hello@miami.com</a></p>
+            <p><a href="mailto:hello@miami.com" class="contact__link">hello@miami.com</a></p>
             <p class="contact__address contact__names">Address</p>
             <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
           </div>
