--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
   <body>
     <header class="header">
       <div class="header__top">
-        <div class="header__phone">+1 234 555-55-55</div>
-        <div class="logo header__logo"></div>
-        <div class="header__action"><a href="#" class="header__link">Call to order</a></div>
+        <div class="header__phone">
+          <a href="#+1 234 555-55-55" class="phone__link"> +1 234 555-55-55</a>
+        </div>
+        <div class="logo header__logo">
+          <a href="#" class="logo__link"></a>
+        </div>
+        <div class="header__action">
+          <a href="#" class="header__link">Call to order</a>
+        </div>
       </div>
       <p class="header__name">Miami<br>Condo Kings</p>
+      <input type="checkbox" class="header__toggler" name="menu" id="menu">
+      <label class="header__toggler-label" for="menu"></label>
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item nav__item_active">Home</li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Consultation</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Testimonials</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
+          <li class="nav__item"><a href="#about_us" class="nav__link">About us</a></li>
+          <li class="nav__item"><a href="#gallery" class="nav__link">Gallery</a></li>
+          <li class="nav__item"><a href="#consultation" class="nav__link">Consultation</a></li>
+          <li class="nav__item"><a href="#testimonials" class="nav__link">Testimonials</a></li>
+          <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
         </ul>
       </nav>
     </header>
@@ -40,9 +48,9 @@
         </div>
       </section>
       <section class="section">
-        <h2 class="heading section__heading">Gallery<span class="heading__crown"></span></h2>
+        <h2 class="heading section__heading" id="gallery">Gallery<span class="heading__crown"></span></h2>
         <div class="gallery">
-          <div class="photos photos_wide_left">
+          <div class="photos photos__wide_left">
             <img src="images/photos/1.jpg" alt="" class="photos__img">
             <img src="images/photos/2.jpg" alt="" class="photos__img">
           </div>
@@ -52,31 +60,37 @@
             <img src="images/photos/4.jpg" alt="" class="photos__img">
           </div>
           <p class="gallery__caption"><a href="#" class="link">Edition Residence</a> / Miami Beach, FL 33139</p>
-          <div class="photos photos_wide_right">
+          <div class="photos photos__wide_right">
             <img src="images/photos/5.jpg" alt="" class="photos__img">
             <img src="images/photos/6.jpg" alt="" class="photos__img">
           </div>
           <p class="gallery__caption"><a href="#" class="link">Faena House</a> / Miami Beach, FL 33140</p>
-          <button class="button gallery__button">Viev all</button>
+          <button class="button gallery__button" type="submit">Viev all</button>
         </div>
       </section>
       <section class="section">
-        <h2 class="heading section__heading">Consultation<span class="heading__crown"></span></h2>
+        <h2 class="heading section__heading" id="consultation">Consultation<span class="heading__crown"></span></h2>
         <div class="consultation">
           <div class="consultation__text">
             <h3 class="consultation__heading">How long have you do<br> yourself a gift?</h3>
             <p>The procedural change mezzo forte starts izoritmichesky<br> pickup at these moments stop LA Mazel and VA<br> Tsukkerman in his "Analysis of musical works."<br> Pointillism, which originated in the music of the early<br> twentieth century, microforms, found a distant historical.</p>
           </div>
-          <form class="form consultation__form">
-            <label class="form__item"><input type="text" name="name" placeholder="Name" class="input form__input"></label>
-            <label class="form__item"><input type="text" name="phone" placeholder="Phone" class="input form__input"></label>
-            <label class="form__item"><input type="text" name="email" placeholder="Email" class="input form__input"></label>
-            <button class="button form__button">Consultation</button>
+          <form class="form consultation__form" action="#" method="GET">
+            <label class="form__item">
+              <input type="text" name="name" placeholder="Name" required maxlength="30" class="input form__input">
+            </label>
+            <label class="form__item">
+              <input type="text" name="phone" placeholder="Phone" required class="input form__input">
+            </label>
+            <label class="form__item">
+              <input type="text" name="email" placeholder="Email" required class="input form__input">
+            </label>
+            <button class="button form__button" type="submit">Consultation</button>
           </form>
         </div>
       </section>
       <section class="section">
-        <h2 class="heading section__heading">Testimonials<span class="heading__crown"></span></h2>
+        <h2 class="heading section__heading" id="testimonials">Testimonials<span class="heading__crown"></span></h2>
         <div class="testimonials">
           <div class="person">
             <img class="person__photo" src="images/people/1.png" alt="Leslie Mckinney">
@@ -94,26 +108,36 @@
             <img class="person__photo" src="images/people/3.png" alt="Max Henry">
             <h3 class="person__name">Max Henry</h3>
             <p class="person__position">Chief Design Officer</p>
-            <p class="person__text">When my lovely valley of steam<br> rises and half-day sun is above an<br> impermeable</p>
+            <p class="person__text">When my lovely valley of steam<br> rises and half-day sun is above an impermeable</p>
           </div>
         </div>
       </section>
       <section class="section">
-        <h2 class="heading section__heading">Contact us<span class="heading__crown"></span></h2>
+        <h2 class="heading section__heading" id="contacts">Contact us<span class="heading__crown"></span></h2>
         <div class="contact">
           <div class="contact__text">
-            <p class="contact__phone contact__names">Phone</p>
-            <p><a href="+1 234 555-55-55" class="contact__link">+1 234 555-55-55</a></p>
-            <p class="contact__email contact__names">Email</p>
-            <p><a href="mailto:hello@miami.com" class="contact__link">hello@miami.com</a></p>
-            <p class="contact__address contact__names">Address</p>
-            <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
+            <div class="contact__info">
+              <p class="contact__phone contact__names">Phone</p>
+              <p><a href="+1 234 555-55-55" class="contact__link">+1 234 555-55-55</a></p>
+              <p class="contact__email contact__names">Email</p>
+              <p><a href="mailto:hello@miami.com" class="contact__link">hello@miami.com</a></p>
+            </div>
+            <div class="contact__info_address">
+              <p class="contact__address contact__names">Address</p>
+              <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
+            </div>
           </div>
-          <form class="form contact__form">
-            <label class="form__item"><input type="text" name="name" placeholder="Name" class="input form__input"></label>
-            <label class="form__item"><input type="text" name="phone" placeholder="Phone" class="input form__input"></label>
-            <label class="form__item"><textarea name="message" placeholder="Message" class="input input__textarea form__input"></textarea></label>
-            <button class="button form__button">Consultation</button>
+          <form class="form contact__form" action="#" method="GET">
+            <label class="form__item">
+              <input type="text" name="name" placeholder="Name" required maxlength="30" class="input form__input">
+            </label>
+            <label class="form__item">
+              <input type="text" name="email" placeholder="Email" required class="input form__input">
+            </label>
+            <label class="form__item">
+              <textarea name="message" placeholder="Message" required class="input input__textarea form__input"></textarea>
+            </label>
+            <button class="button form__button" type="submit">Consultation</button>
           </form>
         </div>
       </section>
