--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="header__top">
         <div class="header__phone">
-          <a href="#+1 234 555-55-55" class="phone__link"> +1 234 555-55-55</a>
+          <a href="tel:+1 234 555-55-55" class="phone__link"> +1 234 555-55-55</a>
         </div>
         <div class="logo header__logo">
           <a href="#" class="logo__link"></a>
@@ -22,8 +22,22 @@
         </div>
       </div>
       <p class="header__name">Miami<br>Condo Kings</p>
-      <input type="checkbox" class="header__toggler" name="menu" id="menu">
-      <label class="header__toggler-label" for="menu"></label>
+      <input id="toggle" class="menu__toggle" type="checkbox">
+      <label for="toggle" class="menu__btn">
+        <span class="menu__span"></span>
+      </label>
+      <nav class="nav__mobile header__nav">
+        <ul class="nav__list_mobile">
+          <li class="nav__item_mobile"><a href="#index.html" class="nav__link_mobile">Home</a></li>
+          <li class="nav__item_mobile"><a href="#about_us" class="nav__link_mobile">About us</a></li>
+          <li class="nav__item_mobile"><a href="#gallery" class="nav__link_mobile">Gallery</a></li>
+          <li class="nav__item_mobile"><a href="#consultation" class="nav__link_mobile">Consultation</a></li>
+          <li class="nav__item_mobile"><a href="#testimonials" class="nav__link_mobile">Testimonials</a></li>
+          <li class="nav__item_mobile"><a href="#contacts" class="nav__link_mobile">Contacts</a></li>
+          <li class="nav__item_mobile"><a href="tel:+1 234 555-55-55" class="phone__link_mobile"> +1 234 555-55-55</a></li>
+          <li class="nav__item_mobile"><a href="#" class="header__link_mobile">Call to order</a></li>
+        </ul>
+      </nav>
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item nav__item_active">Home</li>
@@ -38,7 +52,8 @@
     <main>
       <section class="section">
         <div class="info">
-          <h1 class="info__heading">Miami best<br>Real estate <a href="#">here</a> </h1>
+          <h1 class="info__heading"  id="about_us">Miami best<br>Real estate
+            <a href="#">here</a></h1>
           <div class="info__text">
           <h3 class="info__small_heading">Over 50 years experience in love.</h3>
           <p>Mazel and VA Tsukkerman in his "Analysis of musical works."<br>Pointillism, which originated in the music of the early twentieth<br> century, microforms, found a distant historical.</p>
@@ -65,7 +80,7 @@
             <img src="images/photos/6.jpg" alt="" class="photos__img">
           </div>
           <p class="gallery__caption"><a href="#" class="link">Faena House</a> / Miami Beach, FL 33140</p>
-          <button class="button gallery__button" type="submit">Viev all</button>
+          <button class="button gallery__button" type="submit">View all</button>
         </div>
       </section>
       <section class="section">
@@ -117,13 +132,13 @@
         <div class="contact">
           <div class="contact__text">
             <div class="contact__info">
-              <p class="contact__phone contact__names">Phone</p>
-              <p><a href="+1 234 555-55-55" class="contact__link">+1 234 555-55-55</a></p>
-              <p class="contact__email contact__names">Email</p>
+              <p class="contact__phone contact__names">Phone:</p>
+              <p><a href="tel:1 234 555-55-55" class="contact__link">+1 234 555-55-55</a></p>
+              <p class="contact__email contact__names">Email:</p>
               <p><a href="mailto:hello@miami.com" class="contact__link">hello@miami.com</a></p>
             </div>
             <div class="contact__info_address">
-              <p class="contact__address contact__names">Address</p>
+              <p class="contact__address contact__names">Address:</p>
               <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
             </div>
           </div>
