--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="contact__info_address">
               <p class="contact__address contact__names">Address:</p>
-              <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN<br> 55401</p>
+              <pre class="contact__adrs">400 first ave. n.<br>suite 700<br>Minneapolis, MN<br>55401</pre>
             </div>
           </div>
           <form class="form contact__form" action="#" method="GET">
